# index_quote_engine

./: .env.example  .gitignore  EON_PLAN_CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: document_defaults.json
data/examples/: basic_supplier_import.json  command_apply_supplier_margin.json  command_pass_supplier_discount.json  command_set_margin.json  frigicoll_example.json  holded_export_example.json  storage_quote_example.json
data/fixtures/: factura_frigicoll_split_1x1.json  factura_varios_materiales.json  presupuesto_completo_mixto.json  presupuesto_con_ajustes.json  presupuesto_mano_obra_desplazamiento.json
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_STATUS.md  DATABASE.md  DEVELOPMENT_COMMANDS.md  IMPORT_EXCEL.md  LEARNING_FLOW.md  OBSIDIAN_STRUCTURE.md  PHASES.md  VALIDATION_REPORT.md
eon_quote_agent/: EON_BEHAVIOR_TESTS.md  EON_BOOT_PROTOCOL.md  EON_DECISION_MATRIX.md  EON_MEMORY_MAP.md  EON_RUNTIME_CHECKLIST.md  EON_SECURITY_RULES.md  EON_SOUL.md  HOLDED_V031_PROCEDIMIENTO_VALIDADO.md  OBSIDIAN_CONTEXT_SUMMARY.md  OPENCLAW_EON_SYSTEM.md  README.md  TOOLS.md  pyproject.toml
eon_quote_agent/eon/: __init__.py  cli.py  config.py  intent_parser.py  models.py  orchestrator.py  quote_engine_client.py
eon_quote_agent/eon/integrations/: __init__.py  holded_client.py
eon_quote_agent/eon_index_clima.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eon_quote_agent/scripts/: set_holded_secret_local.ps1  test_holded_readonly.ps1
eon_quote_agent/skills/index-clima-quote/: SKILL.md
eon_quote_agent/tests/: test_intent_parser.py  test_orchestrator.py  test_quote_engine_client.py
migrations/: env.py
quote_api/: __init__.py  catalog_routes.py  db_routes.py  eon_routes.py  learning_routes.py  main.py  routes.py  workflow_routes.py
quote_cli/: __init__.py  __main__.py  main.py
quote_engine/: __init__.py  calculator.py  commands.py  config.py  discounts.py  document_rules.py  eon_tools.py  models.py  normalizer.py  search.py  storage.py  validators.py  workflow.py
scripts/: create_validation_quote.py  db_connect.ps1  db_down.ps1  db_logs.ps1  db_reset_dev.ps1  db_up.ps1  validate_windows.ps1
tests/: test_api.py  test_calculator.py  test_cli.py  test_commands.py  test_db_models.py  test_discounts.py  test_document_rules.py  test_eon_tools.py  test_internal_report.py  test_normalizer.py  test_realistic_fixtures.py  test_search.py  test_storage.py  test_workflow.py
(+49 files in other folders)
